--- a/coc-settings.json
+++ b/coc-settings.json
@@ -56,5 +56,9 @@
       "args": ["start"],
       "filetypes": ["sh"]
     }
-  }
+  },
+  "python.analysis.useLibraryCodeForTypes": false,
+  "pyright.inlayHints.functionReturnTypes": false,
+  "pyright.inlayHints.variableTypes": false,
+  "pyright.inlayHints.parameterTypes": false
 }
