--- a/coc-settings.json
+++ b/coc-settings.json
@@ -7,6 +7,7 @@
     "<cr>": ["expandable?", "expand", "open"],
     "v": "open:vsplit"
   },
+  "workspace.ignoredFolders": ["**/docker/mysql/mysql"],
   "javascript.suggest.autoImports": true,
   "typescript.suggest.autoImports": true,
   "snippets.userSnippetsDirectory": "~/.config/nvim/snips",
