feat: prettier settings

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -79,5 +79,8 @@
     "typescript": "typescript",
     "javascriptreact": "javascript",
     "typescriptreact": "typescript"
-  }
+  },
+  "prettier.htmlWhitespaceSensitivity": "ignore",
+  "prettier.bracketSameLine": true,
+  "prettier.printWidth": 100
 }
