feat: coc-settings prettier

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -80,7 +80,7 @@
     "javascriptreact": "javascript",
     "typescriptreact": "typescript"
   },
-  "prettier.htmlWhitespaceSensitivity": "ignore",
+  // "prettier.htmlWhitespaceSensitivity": "ignore",
   "prettier.bracketSameLine": true,
   "prettier.printWidth": 100
 }
