--- a/coc-settings.json
+++ b/coc-settings.json
@@ -81,6 +81,6 @@
     "typescriptreact": "typescript"
   },
   // "prettier.htmlWhitespaceSensitivity": "ignore",
-  "prettier.bracketSameLine": true,
+  // "prettier.bracketSameLine": true,
   "prettier.printWidth": 100
 }
