feat: remove map jhkl

--- a/.vim/coc-settings.json
+++ b/.vim/coc-settings.json
@@ -4,9 +4,11 @@
   "cSpell.words": [
     "autopep",
     "intelephense",
+    "nohl",
     "noselect",
     "pagenavi",
     "ultisnips",
+    "vi'p",
     "vi'y",
     "vsplit",
     "yazi"
