--- a/coc-settings.json
+++ b/coc-settings.json
@@ -88,7 +88,10 @@
   "python.linting.flake8Args": ["--max-line-length=88"],
   "ruff.lint.args": ["--unsafe-fixes"],
   "cSpell.userWords": [
+    "ABSPATH",
     "Nerdfont",
+    "acfwpcli",
+    "bludelego",
     "capsys",
     "chdir",
     "debugpy",
@@ -97,6 +100,8 @@
     "pyright",
     "pytest",
     "serii",
+    "shortcodes",
+    "vite",
     "wpcf",
     "yaegassy"
   ],
