feat: new words

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -94,9 +94,11 @@
     "debugpy",
     "nvim",
     "phpls",
+    "pyperclip",
     "pyright",
     "pytest",
     "serii",
+    "shortcode",
     "wpcf",
     "yaegassy"
   ],
