feat: vim surroud and macros for md

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -97,6 +97,7 @@
     "chdir",
     "debugpy",
     "endfor",
+    "instanceof",
     "nvim",
     "ofetch",
     "phpls",
@@ -107,6 +108,7 @@
     "serii",
     "shortcode",
     "shortcodes",
+    "typeof",
     "vite",
     "whatsapp",
     "wpcf",
