--- a/coc-settings.json
+++ b/coc-settings.json
@@ -105,8 +105,10 @@
     "nvim",
     "ofetch",
     "phpls",
+    "pinia",
     "playsinline",
     "prefetch",
+    "primevue",
     "pyright",
     "pytest",
     "serii",
