feat: coc tsserver

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -92,10 +92,12 @@
     "Arbalet",
     "Nerdfont",
     "Nuxt",
+    "Roboto",
     "acfwpcli",
     "bludelego",
     "capsys",
     "chdir",
+    "composables",
     "debugpy",
     "endfor",
     "gsap",
@@ -114,6 +116,7 @@
     "serii",
     "shortcode",
     "shortcodes",
+    "tailwindcss",
     "typeof",
     "typeorm",
     "uuidv",
@@ -147,7 +150,7 @@
   "prisma": {
     "enableDiagnostics": true
   },
-  "tsserver.maxTsServerMemory": 768,
+  "tsserver.maxTsServerMemory": 512,
   "eslint.autoFixOnSave": true,
   "eslint.probe": ["javascript", "typescript", "vue"],
   "eslint.validate": ["javascript", "typescript", "vue"],
